# ExerciciosC

./: .gitignore  README.md  argcargv.c  argchar.c  argstruct.c  ptrstruct1.c  structexemplo.c  unionexemplo.c
cap01/: addrspace.c  somachar.c
cap02/: argchar.c  argstruct.c  atexit.c  cat_mmap.c  charaddr.c  enumexemplo.c  intaddr.c  my_atexit.c  ptraddr.c  ptrfunc.c  ptrprint.c  ptrset.c  ptrstruct2.c  signal.c
cap03/: debug.c  filetype.c  my-grep.c  parsefile.c  parsereg.c  parserxml.c  sample.conf  sample.xml  xshell.c
cap04/: Makefile.sample  getopt-long.c  getopt.sh  lderr.c
cap04/Projeto01/: Makefile  info.c  pr1.c  pr1.h
cap04/Projeto02/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  info.c  info.h  pr2  pr2.c  pr2.h
cap04/Projeto02/.deps/: info.Po  pr2.Po
cap04/Projeto02/autom4te.cache/: output.0  requests  traces.0  traces.1
cap04/idioma/: i18n-base.po  i18n-en_US.po  i18n-pt_BR.po  i18n.c
cap04/idioma/locale/en_US/LC_MESSAGES/: i18n.mo
cap04/idioma/locale/pt_BR/LC_MESSAGES/: i18n.mo
cap04/libdynamic/: Makefile  app.c
cap04/libestatic/: Makefile  slib.c  slib.h
